Fixed menu .last top spacing issue in Chrome/Safari

--- a/style.css
+++ b/style.css
@@ -20,7 +20,11 @@ ul.menu {list-style: none; margin: 0; color: #6d6e71; padding: 10px 0 0 0; clear
 ul.menu li{display: inline-block; margin: 0 6px 16px 0; padding: 0; float: left;}
 ul.menu li:after{margin-left: 1px; font-size:20px;} 
 :root *> ul.menu li:after {content: "\2022";} /* stupid non-ie hack */
-ul.menu li:last-child:after, .last:after{content: " " !important;}
+ul.menu li:last-child:after, ul.menu li.last:after{content: " " !important;}
+/* Chrome/Safari .last top spacing fix */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    ul.menu li.last:after{content: "" !important;} 
+}
 
 #header-menu {font-family:'Georgia',serif;}
 #header-menu,
@@ -187,7 +191,6 @@ ul.menu li:last-child:after, .last:after{content: " " !important;}
 .events td {border-top:0;}
 .events .date{
 	text-align:center;
-	width: 1px;
 	padding:8px 12px;
 	background-color:#fef7c8;
 	color:#666;
@@ -196,6 +199,7 @@ ul.menu li:last-child:after, .last:after{content: " " !important;}
 	-moz-box-shadow: 0 0 15px #CCCCCC;
 	-webkit-box-shadow: 0 0 15px #CCCCCC;
 	box-shadow: 0 0 15px #CCCCCC;
+	overflow:hidden;
 }
 .events .month{font-size: 18px;}
 .events .day{font-size: 16px;}
